# ffmpeg-msvc-prebuilt

./: .gitignore  .gitmodules  AGENTS.md  BUILD_KB.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_CN.md  RELEASE.md  TODO.md  build-changelog.sh  build-cmake-dep.sh  build-ffmpeg.sh  build-gnutls.sh  build-guntls.sh  build-libass.sh  build-make-dep.sh  build-meson-dep.cmd  build-meson-dep.sh  build-zlib.sh  build.py  build.sh  env.sh  ffmpeg-latest  ffmpeg.patch  index.md  pnpm-lock.yaml  reprefix.sh  sdl2.pc  setup-env.cmd  setup-env.sh  tsconfig.json  vcpkg-configuration.json  x265_git.patch  zlib.patch
.github/workflows/: add-version.yml  approve-bot-workflows.yml  auto-heal.yml  build-all.yml  build-release.yml  build.yml  build.yml.bak  cache.yml  check.yml  dependency-submission.yml  master-build.yml  pages.yml  pr-build.yml  retention-cleanup.yml  rev-update.yml  scan-updates.yml  seed-setup.yml  test.yml  update-catalog.yml  validate-ports.yml
.vitepress/: config.ts
.vitepress/theme/: style.css
3.x/3.4.14/: version.yaml
4.x/4.4.7-r1/: version.yaml
4.x/4.4.8/: version.yaml
5.x/5.1.10/: version.yaml
5.x/5.1.2-r1/: version.yaml
5.x/5.1.7/: version.yaml
5.x/5.1.9/: version.yaml
6.x/6.1/: version.yaml
6.x/6.1.1-r1/: version.yaml
6.x/6.1.6/: version.yaml
7.x/: build-index.yaml  ffmpeg-7.1.2-r2.yaml
7.x/7.0/: version.yaml
7.x/7.0.2-r2/: version.yaml
7.x/7.1.1-r2/: version.yaml
7.x/7.1.2-r1/: version.yaml
7.x/7.1.2-r2/: version.yaml
7.x/7.1.5/: version.yaml
8.x/: build-index.yaml  ffmpeg-8.0.1-r1.yaml  ffmpeg-8.1.1-r1.yaml  ffmpeg-8.1.1-r2.yaml
8.x/8.0.1-r1/: version.yaml
8.x/8.0.1-r3/: version.yaml
8.x/8.1/: version.yaml
8.x/8.1.1-r1/: version.yaml
8.x/8.1.1-r2/: version.yaml
8.x/8.1.2/: version.yaml
8.x/8.2-dev-1872-g9cbd889/: version.yaml
8.x/8.2-dev-1873-gc6bb22d/: version.yaml
8.x/8.2-dev-1890-g7c176c0/: version.yaml
ci/: SPEC.md
cmake/: BootstrapMSYS2.cmake  BuildAssembly.cmake  CopyPdbs.cmake  DepPackage.cmake  DepResolver.cmake  External_Aom.cmake  External_Bluray.cmake  External_Brotli.cmake  External_Bs2b.cmake  External_Codec2.cmake  External_Dav1d.cmake  External_Expat.cmake  External_FFmpeg.cmake  External_Fontconfig.cmake  External_Freetype.cmake  External_Fribidi.cmake  External_Gme.cmake  External_Gsm.cmake  External_Harfbuzz.cmake  External_Highway.cmake  External_Ilbc.cmake  External_Lame.cmake  External_Lcms2.cmake  External_Libass.cmake  External_Libjxl.cmake  External_Liblc3.cmake  External_Libvpx.cmake  External_Libwebp.cmake  External_Libxml2.cmake  External_Mbedtls.cmake  External_NvcodecHeaders.cmake  External_Ogg.cmake  External_Openexr.cmake  External_Openh264.cmake  External_Openjpeg.cmake  External_Opus.cmake  External_Pthreads.cmake  External_SDL2.cmake  External_Snappy.cmake  External_Sndfile.cmake  (+25 more)
cmake/MesonCrossFiles/: gcc-native.ini.in  msvc-cross.ini.in
data/8.x/: build-index.yaml  ffmpeg-8.1.1-r1.yaml
data/master/: build-index.yaml  ffmpeg-n8.2-dev-1-gabc1234.yaml
docs/: ops-spec.md
docs/en/: guide.md  integration.md  reference.md
docs/zh/: guide.md  integration.md  reference.md
examples/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  README_CN.md  main.c  meson.build
families/: 4.x.cmake  6.x.cmake  7.x.cmake  master.cmake
ffmpeg/: 3.4.14.yaml  3.4.yaml  4.4.7.yaml  4.4.8.yaml  4.4.yaml  5.1.10.yaml  5.1.2.yaml  5.1.7.yaml  5.1.8.yaml  5.1.9.yaml  5.1.yaml  6.1.1.yaml  6.1.6.yaml  6.1.yaml  7.0.2.yaml  7.0.yaml  7.1.1.yaml  7.1.2.yaml  7.1.5.yaml  7.1.yaml  8.0.1.yaml  8.0.yaml  8.1.1.yaml  8.1.2.yaml  8.1.yaml  9.9.9.yaml  SPEC.md  base.yaml  master.yaml
libev/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  event.c
locales/: en.json  zh.json
master/n8.2-dev-1-gabc1234/: version.yaml
meson/: win_arm.ini  win_arm64.ini
patches/: fribidi.patch  gnutls.patch  harfbuzz.patch  libjxl.patch  libtasn1.patch  libvpx.patch  nettle.patch  x264-shared.patch  x265_git-shared.patch  zlib.patch
patches/3.x/: 0006-fix-libmp3lame-static.patch  0007-fix-msvc-lib-naming.patch  0008-fix-sdl2-version.patch  0009-fix-openjpeg-lib-name.patch  0010-fix-opencl.patch  0011-fix-opengl-quoting.patch  0012-fix-opengl-unistd.patch  0013-fix-x264-imports.patch  0014-fix-armasm64-detect-3.4.patch  0014-fix-bzlib-debug.patch  0014-fix-debug-build.patch  0014-fix-x264-bit-depth.patch  0015-fix-arm64-asm.patch  0015-fix-bzlib-debug-build-3.4.patch  0015-fix-debug-build-3.4.patch  0016-fix-msvc-static-ldlib.patch  0017-fix-msvc-sdl2-extralibs.patch  0018-fix-msvc-remove-libm.patch  (+9 more)
patches/bs2b/: meson.build
patches/gsm/: meson.build
patches/lcms2/: CMakeLists.txt
patches/mp3lame/: meson.build
patches/twolame/: meson.build  msvc-static-lib.patch
public/: robots.txt
schema/: README.md
scripts/: build-parallel.py  ci_detect_changes.py  ffport.py  find_closest_yaml.py  generate-content.ts  generate.py  generate_port.py  get_features_for_version.py  package_release.py  porthash.py  render-locales.ts  scan_updates.py  sync_from_vcpkg.py  update_catalog.py  update_catalog_from_release.py
src/: constants.ts  descriptions.ts  index.mustache  releases.mustache
tests/: test_agent_repair.py  test_apply_fix.py  test_auto_heal_decide.py  test_bump_revision.py  test_check_allowed_files.py  test_check_pr_author.py  test_ci_detect_changes.py  test_cleanup_releases.py  test_compute_port_hash.py  test_features.py  test_ffmpeg_deps.cmake  test_ffport_integration.py  test_ffport_yaml_utils.py  test_find_closest_yaml.py  test_json_to_github_output.py  test_lts.py  test_manage_release.py  test_merge.py  test_naming.py  test_porthash.py  test_push_data_branch.py  test_retention_policy.py  test_scan_variants.py  test_scan_versions.py  test_templates.py  test_version.py
toolchain/: win-ar  win-ranlib
triplets/: arm-windows-mixed.cmake  arm-windows.cmake  arm64-windows-mixed.cmake  arm64-windows.cmake  x64-windows-mixed.cmake  x64-windows.cmake  x86-windows-mixed.cmake  x86-windows.cmake
web/: .gitignore  SPEC.md  package.json
(+668 files in other folders)
